unit tests and refactor