@@ -12,6 +12,7 @@ import com.ucu.fintrack.domain.repository.TransactionRepository;
 import java.math.BigDecimal;
 
 import org.springframework.stereotype.Service;
+
 @Service
 public class RegisterTransactionUseCase {
 
@@ -28,38 +29,45 @@ public class RegisterTransactionUseCase {
     }
 
     public Transaction execute(TransactionInput input) {
-        if (input.getIdAccount() == null || input.getIdAccount().isBlank()) {
+        if (input.getIdAccount() == null) {
             throw new IllegalArgumentException("El ID de la cuenta es obligatorio.");
         }
         if (input.getAmount() == null || input.getAmount().compareTo(BigDecimal.ZERO) <= 0) {
             throw new IllegalArgumentException("El monto debe ser mayor que cero.");
         }
-        if (input.getType() == null) {
+        if (input.getCurrency() == null || input.getCurrency().trim().isEmpty()) {
+            throw new IllegalArgumentException("La moneda es obligatoria.");
+        }
+        // Validar y asignar moneda
+        Currency currency;
+        try {
+            String currencyValue = input.getCurrency().trim().toUpperCase(); // Convertir a mayúsculas
+            currency = Currency.valueOf(currencyValue);
+        } catch (IllegalArgumentException e) {
+            throw new IllegalArgumentException("El valor de la moneda es inválido: " + input.getCurrency());
+        }
+        if (input.getTransactionType() == null) {
             throw new IllegalArgumentException("El tipo de transacción es obligatorio.");
         }
 
-        BankAccount account = bankAccountRepository.findById(Long.parseLong(input.getIdAccount()))
+        // Buscar cuenta
+        BankAccount account = bankAccountRepository.findById(input.getIdAccount())
                 .orElseThrow(() -> new IllegalArgumentException("La cuenta especificada no existe."));
 
+        // Buscar categoría (si aplica)
         Category category = null;
-        if (input.getCategory() != null && !input.getCategory().isBlank()) {
+        if (input.getCategory() != null && !input.getCategory().trim().isEmpty()) {
             category = categoryRepository.findById(Long.parseLong(input.getCategory()))
                     .orElse(null);
         }
 
-        Currency currency;
-        try {
-            currency = Currency.valueOf(input.getCurrency().toUpperCase());
-        } catch (IllegalArgumentException e) {
-            throw new IllegalArgumentException("El valor de la moneda es inválido: " + input.getCurrency());
-        }
-
+        // Crear y guardar transacción
         Transaction transaction = new Transaction();
         transaction.setAccount(account);
         transaction.setNameAccount(input.getNameAccount());
         transaction.setAmount(input.getAmount());
         transaction.setCurrency(currency);
-        transaction.setType(input.getType());
+        transaction.setType(input.getTransactionType());
         transaction.setDescription(input.getDescription());
         transaction.setDate(input.getDate());
         transaction.setCategory(category);
@@ -67,4 +75,6 @@ public class RegisterTransactionUseCase {
 
         return transactionRepository.save(transaction);
     }
+
 }
+
